# Verity

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  sources.json  update_lists.py
.github/workflows/: update-lists.yml
src/: main.rs
