[package]
name = "ip_lookup"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = "0.12"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
