[package]
name = "ip_lookup"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49", features = ["rt-multi-thread", "net", "time"] }
axum = "0.8"
reqwest = "0.13"
trust-dns-resolver = "0.23"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = 'abort'
